	OS X java 1.7 open html help in browser fix
	OS X .app launches on latest version of java
	pt_PT update by Pipanni
	SwingGUI sends more info on crash and feedback
	Greek added
	Support for windows hi-dpi screens added
	Support for online play with any map added
	MapEditor: can select what Islands to delete.
	Resign button added in menu of FlashGUI for online play

	Android 61 Bugs with Map updating fixed
		   Sending a saved game added to save game dialog
	Android 60 Cards dialog shows when the game has no cards to give
		   error reports now have an error Signature
	Android 59 fix for notifications not showing when game has & in name
		   fix for not being able to close the lobby when its in a disconnected state
	Android 58 allow any number of players to be selected for private games (minus AI)
		   fix for Dialog theme in lollipop
		   fix to show error when creating game with empty name
	Android 57 Can select colors for all players
		   Can load maps from external storage dir shown in About screen
		   Admins can rename games
	Android 56 Can view own cards at any point in the game.
		   fullscreen option added
	Android 55 updated to Turkish translation - Ekin Topuz
		   better error messages
	Android 54 Private games through Google Play Game Services added.
	Android 53 Capital achievements only given when game actually won - Amanda Lunn
		   sort by rating actually uses g+ +1 count now
	Android 52 italian achievements added
		   can view all possible achievements from main menu 
	Android 51 added google play games services achievements
		   autoplace works even with no empty countries
	Android 50 Send feedback option added
		   can change default app language

1.1.1.5 (22.08.2013)

	annihilate button added to FlashGUI attack screen
	Czech and Slovak languages added by Viliam Tomcanyi
	del islands tool added to the MapEditor
	can load a savegame file by double clicking on it or "Domination.jar c:\test.save"
	done: get rid of "[X]" brakets from main menu